--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    
-    <h1>Aquí vamos a hacer un blog</h1>
-    <p>Este es el párrafo delinicio</p>
+    <div id="container">
+      <div id="post">
+        <h1>Este es un título llamativo
+
+        </h1>
+        <p>Este es el párrafo para ver lo que sepuede realizar con otra rama
+            
+        </p>    
+      </div>  
+    </div>
 </body>
 </html>
