Estilos rama cabecera

--- a/blog.html
+++ b/blog.html
@@ -10,14 +10,14 @@
 <body>
     <div id="container">
       <div id="cabecera">
-          Cabecera
+          SuperBlog
       </div>
       <div id="post">
         <h1>Este es un título llamativo
-
         </h1>
-        <p>Este es el párrafo para ver lo que sepuede realizar con otra rama
-            
+        <p>Este es el párrafo para ver lo que sepuede realizar con otra rama            
+        </p>    
+        <p>Aquí se puede difundir información importante para nuestros usuarios
         </p>    
       </div>  
     </div>
