--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,9 @@
 
         </h1>
         <p>Este es el párrafo para ver lo que sepuede realizar con otra rama
-            
-        </p>    
+        </p>  
+        <p>Segundo párrafo para la rama master antes de realizar el merge
+        </p>      
       </div>  
     </div>
 </body>
