--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,8 @@
         </h1>
         <p>Este es el párrafo para ver lo que sepuede realizar con otra rama
         </p>  
+        <p>Párrafo para mostrar bondades de tener un blog y poder difundirle información valiosa a nuestros usuarios
+        </p>  
       </div>  
     </div>
 </body>
