--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div id="container">
-      <div id="post">
+      <div id="cabecera">
+        SuperBlog
+        <span id="tagline">Tu blog de cabecera</span>
+    </div>
+          <div id="post">
         <h1>Este es un título llamativo
 
         </h1>
